--- a/CarrentalMobileLayout/package.json
+++ b/CarrentalMobileLayout/package.json
@@ -16,8 +16,7 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.0",
-    "react-native-svg": "^12.3.0"
+    "react-native-screens": "^3.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,7 +26,6 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
