fix: solved error icon + update Home, Akun, Daftar Mobil screens

--- a/CarrentalMobileLayout/ios/Podfile
+++ b/CarrentalMobileLayout/ios/Podfile
@@ -12,6 +12,8 @@ target 'CarrentalMobileLayout' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'CarrentalMobileLayoutTests' do
     inherit! :complete
     # Pods for testing
