--- a/CarrentalMobileLayout/ios/CarrentalMobileLayout/Info.plist
+++ b/CarrentalMobileLayout/ios/CarrentalMobileLayout/Info.plist
@@ -69,6 +69,13 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Helvetica-Bold.ttf</string>
+		<string>Helvetica-BoldOblique.ttf</string>
+		<string>helvetica-compressed-5871d14b6903a.otf</string>
+		<string>helvetica-light-587ebe5a59211.ttf</string>
+		<string>Helvetica-Oblique.ttf</string>
+		<string>helvetica-rounded-bold-5871d05ead8de.otf</string>
+		<string>Helvetica.ttf</string>
 	</array>
 </dict>
 </plist>
