--- a/movieApp/.env
+++ b/movieApp/.env
@@ -2,4 +2,4 @@ ACCESS_TOKEN = eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjYmM2MmRiNjNkNTFiNDFmNzdiMmEwYTFk
 
 BASE_URL = https://api.themoviedb.org/3
 
-ImageUrl = https://image.tmdb.org/t/p/original
+IMAGE_URL = https://image.tmdb.org/t/p/original
