--- a/movieApp/package.json
+++ b/movieApp/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-percentage-circle": "^1.0.7",
+    "react-native-progress": "^5.0.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
