fix/feat: change something

--- a/movieApp/.env
+++ b/movieApp/.env
@@ -3,3 +3,5 @@ ACCESS_TOKEN = eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjYmM2MmRiNjNkNTFiNDFmNzdiMmEwYTFk
 BASE_URL = http://code.aldipee.com/api/v1
 
 BASE_URL_STORE = https://fakestoreapi.com
+
+URL_NOT_IMAGE = https://files-smartcity.jakarta.go.id/v1/image/no-images.png
