--- a/movieApp/ios/Podfile
+++ b/movieApp/ios/Podfile
@@ -16,6 +16,8 @@ target 'movieApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'movieAppTests' do
     inherit! :complete
     # Pods for testing
