--- a/movieApp/package.json
+++ b/movieApp/package.json
@@ -19,12 +19,14 @@
     "react-native": "0.67.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-pagination": "^1.5.5",
     "react-native-progress": "^5.0.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
